--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       <label for="course">Course</label>
       <select id="course" name="course" required>
         <option value="" disabled selected>--Select--</option>
-        <option value="1thGradeMath">Math Class 1 - &#8377;800</option>
-        <option value="2thGradeMath">Math Class 2 - &#8377;800</option>
-        <option value="3thGradeMath">Math Class 3 - &#8377;800</option>
-        <option value="4thGradeMath">Math Class 4 - &#8377;800</option>
-        <option value="5thGradeMath">Math Class 5 - &#8377;800</option>
-        <option value="6thGradeMath">Math Class 6 - &#8377;1200</option>
-        <option value="7thGradeMath">Math Class 7 - &#8377;1200</option>
-        <option value="8thGradeMath">Math Class 8 - &#8377;1200</option>
-        <option value="9thGradeMath">Math Class 9 - &#8377;1200</option>
-        <option value="10thGradeMath" disabled>Math Class 10 - &#8377;1500</option>
-        <option value="11thGradeMath" disabled>Inter 1A & 1B - &#8377;2000</option>
-        <option value="12thGradeMath" disabled>Inter 2A & 2B - &#8377;2000</option>
+        <option value="1thGradeMath">Math Class 1 - &#8377;1000</option>
+        <option value="2thGradeMath">Math Class 2 - &#8377;1000</option>
+        <option value="3thGradeMath">Math Class 3 - &#8377;1000</option>
+        <option value="4thGradeMath">Math Class 4 - &#8377;1000</option>
+        <option value="5thGradeMath">Math Class 5 - &#8377;1000</option>
+        <option value="6thGradeMath">Math Class 6 - &#8377;1500</option>
+        <option value="7thGradeMath">Math Class 7 - &#8377;1500</option>
+        <option value="8thGradeMath">Math Class 8 - &#8377;1500</option>
+        <option value="9thGradeMath">Math Class 9 - &#8377;1500</option>
+        <option value="10thGradeMath">Math Class 10 - &#8377;1800</option>
+        <option value="11thGradeMath" disabled>Inter 1A & 1B - &#8377;2500</option>
+        <option value="12thGradeMath" disabled>Inter 2A & 2B - &#8377;2500</option>
       </select>
     </div>
     <div class="form-group">
@@ -71,11 +71,11 @@
       <div class="mode-options">
         <div class="mode-option">
           <input type="radio" id="online" name="mode" value="online" required>
-          <label for="online">On-Site</label>
+          <label for="online">Online</label>
         </div>
         <div class="mode-option">
           <input type="radio" id="offline" name="mode" value="offline">
-          <label for="offline">At-Home</label>
+          <label for="offline">Private (At-Home)</label>
         </div>
       </div>
     </div>
